--- a/inside-three.html
+++ b/inside-three.html
@@ -6,6 +6,19 @@
     <title>Document</title>
 </head>
 <body>
+ <!--navbar-->    
+
+<!--image-->
+
+<!--paragraph one--> 
+
+<!--paragraph two--> 
+
+<!--paragraph three--> 
+
+<!--next buttons--> 
+
+<!--footer--> 
     
 </body>
 </html>
