--- a/homepage.html
+++ b/homepage.html
@@ -6,6 +6,12 @@
     <title>Document</title>
 </head>
 <body>
-    
+<!--navbar-->
+
+<!--images-->
+
+<!--paragraph-->
+
+<!--cards-->
 </body>
 </html>
