--- a/credits.html
+++ b/credits.html
@@ -3,9 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Credits</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+    <!--navbar-->    
+ <nav>
+    <a href=""><img src="" alt=""></a>
+    <img src="" alt="">
+    <div></div>
+    <ul>
+        <li><a href="./inside-one.html">The Economy</a></li>
+        <li><a href="./inside-two.html">Humans of Zimbabwe</a></li>
+        <li><a href="./inside-three.html">Silent Crisis</a></li>
+        <li><a href="./FAQs.html">FAQs</a></li>
+        <li><a href="./credits.html">Credits</a></li>
+    </ul>
+</nav>
+
+<!--credits-->
+
 
 </body>
 </html>
