--- a/inside-one.html
+++ b/inside-one.html
@@ -3,17 +3,56 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>The Economy</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
 <!--navbar-->    
+<nav>
+    <a href=""><img src="" alt=""></a>
+    <img src="" alt="">
+    <div></div>
+    <ul>
+        <li><a href="./inside-one.html">The Economy</a></li>
+        <li><a href="./inside-two.html">Humans of Zimbabwe</a></li>
+        <li><a href="./inside-three.html">Silent Crisis</a></li>
+        <li><a href="./FAQs.html">FAQs</a></li>
+        <li><a href="./credits.html">Credits</a></li>
+    </ul>
+</nav>
 
 <!--image-->
 
 <!--paragraph one--> 
+<h3>A ‘dead economy’</h3>
+<p>
+    Zimbabwe’s economic woes are often blamed on its former ruler, Robert Mugabe, who led the nation for nearly four decades, until 2017. 
+    He died earlier this year.
+
+New leader Emmerson Mnangagwa’s administration has struggled to stabilize the moribund economy and curb hyperinflation while a severe drought has crippled productivity.
+
+Mnangagwa has blamed US sanctions for Zimbabwe’s economic crisis. The US imposed economic sanctions in 2003 on Mugabe and 76 other high-ranking government officials, accusing them of undermining democracy.
+
+“The continued judgment setting of Utopian standards for Zimbabwe are callous, vindictive and should not be allowed to continue … enough is enough,” Mnangagwa told supporters at a rally in October.
+
+However, he later pleaded for patience from Zimbabweans, acknowledging that the country’s economy was “dead.”
+
+“I’m aware of the pain being experienced by the poor and the marginalized. Getting the economy working again from being dead will require time, patience, unity of purpose and perseverance,” Mnangagwa said.
+</p>
 
 <!--paragraph two--> 
+<h3>Risk of starvation</h3>
+<p>
+    As well as hyperinflation, Zimbabwe has been hit by severe drought in parts of the country. The UN World Food Programme (WFP) warned on Tuesday that food supplies will run out in early 2020 unless urgent assistance is provided.
 
+“As things stand, we will run out of food by end of February, coinciding with the peak of the hunger season — when needs are at their highest,” said Niels Balzer, the WFP’s deputy country director in Zimbabwe. “Firm pledges are urgently needed as it can take up to three months for funding commitments to become food on people’s tables.”
+
+The WFP announced earlier in the month that $293 million was needed to provide 240,000 tonnes of aid to vulnerable communities in Zimbabwe.
+Its director, David Beasley, has appealed to the international community to step up funding to address the root causes of long-term hunger in Zimbabwe.
+
+According to the UN, more than 2.2 million people in urban Zimbabwe and 5.5 million others in rural areas are at risk of starvation due to a drought in the last agriculture season and a prolonged dry spell.
+Poor rains have exacerbated the food crisis in the southern African nation which is also grappling with providing drinking water for its citizens.
+</p>
 <!--paragraph three--> 
 
 <!--next buttons--> 
