--- a/homepage.html
+++ b/homepage.html
@@ -3,15 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Zimagine</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
 <!--navbar-->
+<nav>
+    <a href=""><img src="" alt=""></a>
+    <img src="" alt="">
+    <div></div>
+    <ul>
+        <li><a href="./inside-one.html">The Economy</a></li>
+        <li><a href="./inside-two.html">Humans of Zimbabwe</a></li>
+        <li><a href="./inside-three.html">Silent Crisis</a></li>
+        <li><a href="./FAQs.html">FAQs</a></li>
+        <li><a href="./credits.html">Credits</a></li>
+    </ul>
+</nav>
+<!--main element-->
+<main>
 
 <!--images-->
 
 <!--paragraph-->
 
 <!--cards-->
+
+<!--footer-->
+<footer>
+    
+</footer>
+</main>
 </body>
 </html>
