--- a/homepage.html
+++ b/homepage.html
@@ -7,10 +7,17 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+
+<!--main element-->
+<main>
+   <div class="section">
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/yxF1UXpaink?controls=0&amp;start=7" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
+
 <!--navbar-->
-<nav>
-    <a href=""><img src="" alt=""></a>
-    <img src="" alt="">
+nav>
+    <a href="./homepage.html"><img src="./images/logo.png" alt="logo"></a>
+    <img id="hamburger" src="./icons/menu2.svg" alt="Menu">
     <div></div>
     <ul>
         <li><a href="./inside-one.html">The Economy</a></li>
@@ -20,9 +27,6 @@
         <li><a href="./credits.html">Credits</a></li>
     </ul>
 </nav>
-<!--main element-->
-<main>
-
 <!--images-->
 
 <!--paragraph-->
