--- a/inside-one.html
+++ b/inside-one.html
@@ -9,8 +9,8 @@
 <body>
 <!--navbar-->    
 <nav>
-    <a href=""><img src="" alt=""></a>
-    <img src="" alt="">
+    <a href="./homepage.html"><img src="./images/logo.png" alt="logo"></a>
+    <img id="hamburger" src="./icons/menu2.svg" alt="Menu">
     <div></div>
     <ul>
         <li><a href="./inside-one.html">The Economy</a></li>
@@ -24,6 +24,7 @@
 <!--image-->
 
 <!--paragraph one--> 
+<article>
 <h3>A ‘dead economy’</h3>
 <p>
     Zimbabwe’s economic woes are often blamed on its former ruler, Robert Mugabe, who led the nation for nearly four decades, until 2017. 
@@ -54,7 +55,7 @@ According to the UN, more than 2.2 million people in urban Zimbabwe and 5.5 mill
 Poor rains have exacerbated the food crisis in the southern African nation which is also grappling with providing drinking water for its citizens.
 </p>
 <!--paragraph three--> 
-
+</article>
 <!--next buttons--> 
 
 <!--footer--> 
