--- a/inside-three.html
+++ b/inside-three.html
@@ -9,9 +9,9 @@
 <body>
  <!--navbar-->    
  <nav>
-    <a href=""><img src="" alt=""></a>
-    <img src="" alt="">
-    <div></div>
+    <a href="./homepage.html"><img src="./images/logo.png" alt="logo"></a>
+    <img id="hamburger" src="./icons/menu2.svg" alt="Menu">
+    <div>
     <ul>
         <li><a href="./inside-one.html">The Economy</a></li>
         <li><a href="./inside-two.html">Humans of Zimbabwe</a></li>
@@ -19,13 +19,19 @@
         <li><a href="./FAQs.html">FAQs</a></li>
         <li><a href="./credits.html">Credits</a></li>
     </ul>
+</div>
 </nav>
-
+<header class="center">
+    <h1>
+        THE SILENT CRISIS IN ZIMBABWE
+    </h1>
+</header>
 <!--video-->
 <div>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/whDZUhEgDwo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe width="600" height="315" src="https://www.youtube.com/embed/whDZUhEgDwo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
 <!--paragraph one--> 
+<article>
 <p>
     Zimbabwe is facing an “economic and humanitarian crisis” amid a lethal cocktail of macroeconomic instability, climate shocks and policy missteps, according to the International Monetary Fund (IMF).
 
@@ -57,7 +63,7 @@ Zimbabwean authorities are therefore forced to walk a tightrope between tight mo
 
 “While the 2020 budget includes a significant increase in social spending, it is likely insufficient to meet the pressing social needs. Absent a scaling up of donor support, the risks of a deep humanitarian crisis are high,” IMF officials concluded.
 </p>
-
+</article>
 <!--paragraph three--> 
 
 <!--next buttons--> 
