--- a/inside-two.html
+++ b/inside-two.html
@@ -9,9 +9,9 @@
 <body>
  <!--navbar-->    
  <nav>
-    <a href=""><img src="" alt=""></a>
-    <img src="" alt="">
-    <div></div>
+    <a href="./homepage.html"><img src="./images/logo.png" alt="logo"></a>
+    <img id="hamburger" src="./icons/menu2.svg" alt="Menu">
+    <div>
     <ul>
         <li><a href="./inside-one.html">The Economy</a></li>
         <li><a href="./inside-two.html">Humans of Zimbabwe</a></li>
@@ -19,10 +19,12 @@
         <li><a href="./FAQs.html">FAQs</a></li>
         <li><a href="./credits.html">Credits</a></li>
     </ul>
+</div>
 </nav>
 <!--image-->
 
 <!--paragraph one--> 
+<article>
 <p>
     Harare, Zimbabwe (CNN)In tattered blue overalls and torn gumboots, Blessing Mautsa, 34, a sand dealer in Harare’s Mbare-Magaba industrial market sits miserably in the shade, his crestfallen face is evidence of a day’s toil for little return.
 
@@ -88,7 +90,7 @@ Parirenyatwa was once a busy hospital, serving thousands of patients daily. It i
 
 “The authorities are not saying anything about what is happening in the hospitals. But we all know that people are dying. They are dying … avoidable deaths that shouldn’t happen when doctors are there,” Mungofa said.
 </p>
-
+</article>
 <!--next buttons--> 
 
 <!--footer-->    
