--- a/credits.html
+++ b/credits.html
@@ -9,9 +9,9 @@
 <body>
     <!--navbar-->    
  <nav>
-    <a href=""><img src="" alt=""></a>
-    <img src="" alt="">
-    <div></div>
+    <a href="./homepage.html"><img src="./images/logo.png" alt="logo"></a>
+    <img id="hamburger" src="./icons/menu2.svg" alt="Menu">
+    <div>
     <ul>
         <li><a href="./inside-one.html">The Economy</a></li>
         <li><a href="./inside-two.html">Humans of Zimbabwe</a></li>
@@ -19,7 +19,13 @@
         <li><a href="./FAQs.html">FAQs</a></li>
         <li><a href="./credits.html">Credits</a></li>
     </ul>
+</div>
 </nav>
+
+<div class="section">
+    <video autoplay loop>
+        <source src="./videos/Zimbabwe.mp4" type="video/mp4">
+    </video>
 
 <!--credits-->
 
