--- a/crisis/index.html
+++ b/crisis/index.html
@@ -9,15 +9,15 @@
 <body>
  <!--navbar-->    
  <nav>
-    <a href="./homepage.html"><img src="./images/logo.png" alt="logo"></a>
+    <a href="./index.html"><img src="./images/logo.png" alt="logo"></a>
     <img id="hamburger" src="./icons/menu2.svg" alt="Menu">
     <div>
     <ul>
-        <li><a href="./inside-one.html">The Economy</a></li>
-        <li><a href="./inside-two.html">Humans of Zimbabwe</a></li>
-        <li><a href="./inside-three.html">Silent Crisis</a></li>
-        <li><a href="./FAQs.html">FAQs</a></li>
-        <li><a href="./credits.html">Credits</a></li>
+        <li><a href="./../economy/index.html">The Economy</a></li>
+        <li><a href="./../humans/index.html">Humans of Zimbabwe</a></li>
+        <li><a href="./../crisis/index.html">Silent Crisis</a></li>
+        <li><a href="./../faq/index.html">FAQs</a></li>
+        <li><a href="./../credits/index.html">Credits</a></li>
     </ul>
 </div>
 </nav>
