--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <main>
    <div class="section">
    <video autoplay loop muted>
-       <source src="./videos/Zimbabwe.webm" type="video/webm">
+       <source src="./videos/Zimbabwe.mp4" type="video/mp4">
    </video>
 </div>
 
