--- a/faq/index.html
+++ b/faq/index.html
@@ -12,7 +12,7 @@
     <img id="hamburger" src="./icons/menu2.svg" alt="Menu">
     <div></div>
     <ul>
-        <li><a href="./../economy/index.html">The Economy</a></li>
+        <li><a href="./../project-two/economy/index.html">The Economy</a></li>
         <li><a href="./../humans/index.html">Humans of Zimbabwe</a></li>
         <li><a href="./../crisis/index.html">Silent Crisis</a></li>
         <li><a href="./../faq/index.html">FAQs</a></li>
