--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zimagine</title>
     <link rel="stylesheet" href="./style.css">
-</head>omm
+</head>
 <body>
 
 <!--main element-->
@@ -21,7 +21,6 @@
 <nav id="homepage">
     <a href="./index.html"><img src="./images/logo.png" alt="logo"></a>
     <img id="hamburger" src="./icons/menu2.svg" alt="Menu">
-    <div></div>
     <ul>
         <li><a href="./../economy/index.html">The Economy</a></li>
         <li><a href="./../humans/index.html">Humans of Zimbabwe</a></li>
