--- a/economy/index.html
+++ b/economy/index.html
@@ -9,7 +9,7 @@
 <body>
 <!--navbar-->    
 <nav>
-    <a href="./../index.html"><img src="./images/logo.png" alt="logo"></a>
+    <a href="./../index.html"><img src="./../images/logo.png" alt="logo"></a>
     <img id="hamburger" src="./icons/menu2.svg" alt="Menu">
     <div></div>
     <ul>
@@ -22,7 +22,10 @@
 </nav>
 
 <!--image-->
-
+<!--header-->
+<header class="center">
+<h1>THE ECONOMY</h1>
+</header>
 <!--paragraph one--> 
 <article>
 <h3>A ‘dead economy’</h3>
