--- a/faq/index.html
+++ b/faq/index.html
@@ -8,7 +8,7 @@
 <body>
 <!--navbar-->    
 <nav>
-    <a href="./index.html"><img src="./images/logo.png" alt="logo"></a>
+    <a href="./index.html"><img src="./../images/logo.png" alt="logo"></a>
     <img id="hamburger" src="./icons/menu2.svg" alt="Menu">
     <div></div>
     <ul>
