--- a/humans/index.html
+++ b/humans/index.html
@@ -9,7 +9,7 @@
 <body>
  <!--navbar-->    
  <nav>
-    <a href="./../index.html"><img src="./images/logo.png" alt="logo"></a>
+    <a href="./../index.html"><img src="./../images/logo.png" alt="logo"></a>
     <img id="hamburger" src="./icons/menu2.svg" alt="Menu">
     <div>
     <ul>
@@ -22,7 +22,10 @@
 </div>
 </nav>
 <!--image-->
-
+<!--header-->
+<header class="center">
+<h1>HUMANS OF ZIMBABWE</h1>
+</header>
 <!--paragraph one--> 
 <article>
 <p>
