--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
     <a href="./index.html"><img src="./images/logo.png" alt="logo"></a>
     <img id="hamburger" src="./icons/menu2.svg" alt="Menu">
     <ul>
-        <li><a href="./../economy/index.html">The Economy</a></li>
-        <li><a href="./../humans/index.html">Humans of Zimbabwe</a></li>
-        <li><a href="./../crisis/index.html">Silent Crisis</a></li>
-        <li><a href="./../faq/index.html">FAQs</a></li>
-        <li><a href="./../credits/index.html">Credits</a></li>
+        <li><a href="./economy/index.html">The Economy</a></li>
+        <li><a href="./humans/index.html">Humans of Zimbabwe</a></li>
+        <li><a href="./crisis/index.html">Silent Crisis</a></li>
+        <li><a href="./faq/index.html">FAQs</a></li>
+        <li><a href="./credits/index.html">Credits</a></li>
     </ul>
 </nav>
 </div>
