--- a/economy/index.html
+++ b/economy/index.html
@@ -13,11 +13,11 @@
     <img id="hamburger" src="./icons/menu2.svg" alt="Menu">
     <div></div>
     <ul>
-        <li><a href="./../economy/index.html">The Economy</a></li>
-        <li><a href="./../humans/index.html">Humans of Zimbabwe</a></li>
-        <li><a href="./../crisis/index.html">Silent Crisis</a></li>
-        <li><a href="./../faq/index.html">FAQs</a></li>
-        <li><a href="./../credits/index.html">Credits</a></li>
+        <li><a href="./economy/index.html">The Economy</a></li>
+        <li><a href="./humans/index.html">Humans of Zimbabwe</a></li>
+        <li><a href="./crisis/index.html">Silent Crisis</a></li>
+        <li><a href="./faq/index.html">FAQs</a></li>
+        <li><a href="./credits/index.html">Credits</a></li>
     </ul>
 </nav>
 
@@ -25,6 +25,7 @@
 <!--header-->
 <header class="center">
 <h1>THE ECONOMY</h1>
+<img src="./../images/1x/Artboard 3.png" alt="graph"> 
 </header>
 <!--paragraph one--> 
 <article>
