--- a/economy/index.html
+++ b/economy/index.html
@@ -25,7 +25,7 @@
 <!--header-->
 <header class="center">
 <h1>THE ECONOMY</h1>
-<img src="./../images/1x/Artboard 3.png" alt="graph"> 
+<img class="graph" src="./../images/1x/Artboard 3.png" alt="graph"> 
 </header>
 <!--paragraph one--> 
 <article>
