--- a/index.html
+++ b/index.html
@@ -33,7 +33,25 @@
 <!--images-->
 
 <!--paragraph-->
+<p>
+    There is beauty in this country
+</p>
 
+<p>
+    Beauty that has so much to offer
+</p>
+
+<p>
+    It does not deserve to be treated this way
+</p>
+
+<p>
+    We do not deserve to be treated this way
+</p>
+
+<p>
+    This country deserved better
+</p>
 <!--cards-->
 
 <!--footer-->
