--- a/crisis/index.html
+++ b/crisis/index.html
@@ -25,6 +25,7 @@
     <h1>
         THE SILENT CRISIS IN ZIMBABWE
     </h1>
+    <img class="graph" src="./../images/1x/Artboard 5.png">
 </header>
 <!--video-->
 <div>
