--- a/humans/index.html
+++ b/humans/index.html
@@ -25,7 +25,7 @@
 <!--header-->
 <header class="center">
 <h1>HUMANS OF ZIMBABWE</h1>
-<img class="graph" src="./../images/1x/Artboard 4.png">
+<img src="./../images/1x/Artboard 4.png">
 </header>
 <!--paragraph one--> 
 <article>
