--- a/economy/index.html
+++ b/economy/index.html
@@ -23,9 +23,11 @@
 
 <!--image-->
 <!--header-->
-<header class="center">
-<h1>THE ECONOMY</h1>
-<img src="./../images/1x/Artboard 3.png" alt="graph"> 
+<header>
+    <div class="center">
+<img src="./../images/1x/Artboard 3.png" alt="graph" style="width: 60%;"> 
+<h1 class="centered-text">The Economy</h1>
+</div>
 </header>
 <!--paragraph one--> 
 <article>
