--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <!--main element-->
 <main>
-   <div class="section">
+   <div class="video-bg">
    <video autoplay loop muted>
        <source src="./videos/Zimbabwe.mp4" type="video/mp4">
    </video>
