--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <main>
    <div class="video-bg">
    <video autoplay loop muted>
-       <source src="./videos/Zimbabwe.mp4" type="video/mp4">
+       <source src="./videos/zim2.webm" type="video/mp4">
    </video>
 </div>
 
