--- a/credits/index.html
+++ b/credits/index.html
@@ -13,11 +13,10 @@
     <img id="hamburger" src="./icons/menu2.svg" alt="Menu">
     <div>
     <ul>
-        <li><a href="./economy/index.html">The Economy</a></li>
-        <li><a href="./humans/index.html">Humans of Zimbabwe</a></li>
-        <li><a href="./crisis/index.html">Silent Crisis</a></li>
-        <li><a href="./faq/index.html">FAQs</a></li>
-        <li><a href="./credits/index.html">Credits</a></li>
+        <li><a href="./../economy/index.html">The Economy</a></li>
+        <li><a href="./../humans/index.html">Humans of Zimbabwe</a></li>
+        <li><a href="./../crisis/index.html">Silent Crisis</a></li>
+        <li><a href="./../credits/index.html">Credits</a></li>
     </ul>
 </div>
 </nav>
