--- a/humans/index.html
+++ b/humans/index.html
@@ -22,9 +22,11 @@
 </nav>
 <!--image-->
 <!--header-->
-<header class="center">
-<h1>HUMANS OF ZIMBABWE</h1>
+<header>
+<div class="center">
 <img src="./../images/1x/Artboard 4.png">
+<h1>Humans of Zimbabwe</h1>
+</div>
 </header>
 <!--paragraph one--> 
 <article>
