--- a/crisis/index.html
+++ b/crisis/index.html
@@ -20,11 +20,13 @@
     </ul>
 </div>
 </nav>
-<header class="center">
-    <h1>
-        THE SILENT CRISIS IN ZIMBABWE
-    </h1>
+<header>
+    <div class="center">
     <img src="./../images/1x/Artboard 5.png">
+    <h1>
+        The Silent Crisis in Zimbabwe
+    </h1>
+</div>
 </header>
 <!--video-->
 <div>
