--- a/crisis/index.html
+++ b/crisis/index.html
@@ -22,7 +22,7 @@
 </nav>
 <header>
     <div class="center">
-    <img src="./../images/1x/Artboard 5.png">
+    <img src="./../images/1x/Artboard 5.png" alt="graph" style="width: 60%;">
     <h1>
         The Silent Crisis in Zimbabwe
     </h1>
