--- a/humans/index.html
+++ b/humans/index.html
@@ -24,7 +24,7 @@
 <!--header-->
 <header>
 <div class="center">
-<img src="./../images/1x/Artboard 4.png">
+<img src="./../images/1x/Artboard 4.png" alt="graph" style="width: 60%;">
 <h1>Humans of Zimbabwe</h1>
 </div>
 </header>
