--- a/crisis/index.html
+++ b/crisis/index.html
@@ -24,7 +24,7 @@
     <div class="center">
     <img src="./../images/1x/Artboard 5.png" alt="graph" style="width: 60%;">
     <h1>
-        The Silent Crisis in Zimbabwe
+        THE SILENT CRISIS IN ZIMBABWE
     </h1>
 </div>
 </header>
