--- a/economy/index.html
+++ b/economy/index.html
@@ -25,7 +25,7 @@
 <header>
     <div class="center">
 <img src="./../images/1x/Artboard 3.png" alt="graph" style="width: 60%;"> 
-<h1 class="centered-text">The Economy</h1>
+<h1 class="centered-text">THE ECONOMY</h1>
 </div>
 </header>
 <!--paragraph one--> 
