--- a/humans/index.html
+++ b/humans/index.html
@@ -25,7 +25,7 @@
 <header>
 <div class="center">
 <img src="./../images/1x/Artboard 4.png" alt="graph" style="width: 60%;">
-<h1>Humans of Zimbabwe</h1>
+<h1>HUMANS OF ZIMBABWE</h1>
 </div>
 </header>
 <!--paragraph one--> 
