--- a/crisis/index.html
+++ b/crisis/index.html
@@ -21,12 +21,7 @@
 </div>
 </nav>
 <header>
-    <div class="center">
-    <img src="./../images/1x/Artboard 5.png" alt="graph" style="width: 60%;">
-    <h1>
-        THE SILENT CRISIS IN ZIMBABWE
-    </h1>
-</div>
+    <img src="./../images/crisis.png" alt="The Silent Crisis" class="center">
 </header>
 <!--video-->
 <div>
