--- a/humans/index.html
+++ b/humans/index.html
@@ -23,10 +23,7 @@
 <!--image-->
 <!--header-->
 <header>
-<div class="center">
-<img src="./../images/1x/Artboard 4.png" alt="graph" style="width: 60%;">
-<h1>HUMANS OF ZIMBABWE</h1>
-</div>
+<img src="./../images/humans.png" alt="Humans of Zimbabwe"class="center" >
 </header>
 <!--paragraph one--> 
 <article>
