--- a/economy/index.html
+++ b/economy/index.html
@@ -23,10 +23,7 @@
 <!--image-->
 <!--header-->
 <header>
-    <div class="center">
-<img src="./../images/1x/Artboard 3.png" alt="graph" style="width: 60%;"> 
-<h1 class="centered-text">THE ECONOMY</h1>
-</div>
+<img src="./../images/economy.png" alt="The Economy" class="center"> 
 </header>
 <!--paragraph one--> 
 <article>
