--- a/crisis/index.html
+++ b/crisis/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Silent Crisis</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./../css/style.css">
 </head>
 <body>
  <!--navbar-->    
  <nav>
-    <a href="./index.html"><img src="./images/logo.png" alt="logo"></a>
+    <a href="./index.html"><img src="./../images/logo.png" alt="logo"></a>
     <img id="hamburger" src="./icons/menu2.svg" alt="Menu">
     <div>
     <ul>
@@ -20,9 +20,9 @@
     </ul>
 </div>
 </nav>
-<header>
+<div>
     <img src="./../images/crisis.png" alt="The Silent Crisis" class="center">
-</header>
+</div>
 <!--video-->
 <div>
     <iframe width="600" height="315" src="https://www.youtube.com/embed/whDZUhEgDwo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
