--- a/economy/index.html
+++ b/economy/index.html
@@ -4,14 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Economy</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./../css/style.css">
 </head>
 <body>
 <!--navbar-->    
 <nav>
-    <a href="./../index.html"><img src="./../images/logo.png" alt="logo"></a>
-    <img id="hamburger" src="./icons/menu2.svg" alt="Menu">
-    <div></div>
+    <a href="./index.html"><img src="./../images/logo.png" alt="logo"></a>
+    <img id="hamburger" src="./../icons/menu.svg" alt="Menu">
     <ul>
         <li><a href="./../economy/index.html">The Economy</a></li>
         <li><a href="./../humans/index.html">Humans of Zimbabwe</a></li>
