--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zimagine</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
 
@@ -16,11 +16,12 @@
    </video>
 </div>
 
+
 <!--navbar-->
 <div>
 <nav id="homepage">
-    <a href="./index.html"><img src="./images/logo.png" alt="logo"></a>
-    <img id="hamburger" src="./icons/menu2.svg" alt="Menu">
+    <a href="./index.html"><img id="logo" src="./images/logo.png" alt="logo"></a>
+    <img id="hamburger"  src="./icons/menu.svg" alt="menu">
     <ul>
         <li><a href="./economy/index.html">The Economy</a></li>
         <li><a href="./humans/index.html">Humans of Zimbabwe</a></li>
