--- a/humans/index.html
+++ b/humans/index.html
@@ -4,13 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Humans of Zimbabwe</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./../css/style.css">
 </head>
 <body>
  <!--navbar-->    
  <nav>
-    <a href="./../index.html"><img src="./../images/logo.png" alt="logo"></a>
-    <img id="hamburger" src="./icons/menu2.svg" alt="Menu">
+    <a href="./index.html"><img src="./../images/logo.png" alt="logo"></a>
     <div>
     <ul>
         <li><a href="./../economy/index.html">The Economy</a></li>
