--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zimagine</title>
     <link rel="stylesheet" href="./css/style.css">
+    <script src="./js/script.js" defer></script>
 </head>
 <body>
 
@@ -15,14 +16,13 @@
        <source src="./videos/zim2.webm" type="video/mp4">
    </video>
 </div>
-
-
 <!--navbar-->
 <div>
 <nav id="homepage">
     <a href="./index.html"><img id="logo" src="./images/logo.png" alt="logo"></a>
     <img id="hamburger"  src="./icons/menu.svg" alt="menu">
-    <ul>
+    <div id="overlay" class="active"></div>
+    <ul id="menu">
         <li><a href="./economy/index.html">The Economy</a></li>
         <li><a href="./humans/index.html">Humans of Zimbabwe</a></li>
         <li><a href="./crisis/index.html">Silent Crisis</a></li>
