--- a/credits/index.html
+++ b/credits/index.html
@@ -10,9 +10,9 @@
     <!--navbar-->    
  <nav>
     <a href="./../index.html"><img src="./../images/logo.png" alt="logo"></a>
-    <img id="hamburger" src="./../icons/menu.svg" alt="Menu" class="active">
+    <img id="hamburger" src="./../icons/menu.svg" alt="Menu">
     <div id="overlay" class="active"></div>
-    <ul id="menu">
+    <ul id="menu" class="active">
         <li><a href="./../economy/index.html">The Economy</a></li>
         <li><a href="./../humans/index.html">Humans of Zimbabwe</a></li>
         <li><a href="./../crisis/index.html">Silent Crisis</a></li>
