--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <a href="./index.html"><img id="logo" src="./images/logo.png" alt="logo"></a>
     <img id="hamburger"  src="./icons/menu.svg" alt="menu">
     <div id="overlay" class="active"></div>
-    <ul id="menu">
+    <ul id="menu" class="active">
         <li><a href="./economy/index.html">The Economy</a></li>
         <li><a href="./humans/index.html">Humans of Zimbabwe</a></li>
         <li><a href="./crisis/index.html">Silent Crisis</a></li>
