--- a/crisis/index.html
+++ b/crisis/index.html
@@ -12,7 +12,7 @@
     <a href="./../index.html"><img src="./../images/logo.png" alt="logo"></a>
     <img id="hamburger" src="./../icons/menu.svg" alt="Menu" class="active">
     <div id="overlay" class="active"></div>
-    <ul id="menu">
+    <ul id="menu" class="active">
         <li><a href="./../economy/index.html">The Economy</a></li>
         <li><a href="./../humans/index.html">Humans of Zimbabwe</a></li>
         <li><a href="./../crisis/index.html">Silent Crisis</a></li>
