--- a/index.html
+++ b/index.html
@@ -34,25 +34,27 @@
 <!--images-->
 
 <!--paragraph-->
+<div class="center-lines">
 <p>
     There is beauty in this country
 </p>
-
+<br>
 <p>
     Beauty that has so much to offer
 </p>
-
+<br>
 <p>
     It does not deserve to be treated this way
 </p>
-
+<br>
 <p>
     We do not deserve to be treated this way
 </p>
-
+<br>
 <p>
     This country deserved better
 </p>
+</div>
 <!--cards-->
 
 <!--footer-->
