--- a/economy/index.html
+++ b/economy/index.html
@@ -135,9 +135,8 @@ Last month, Health Minister Obadiah Moyo was arrested on corruption charges in r
         “People are rejecting the Zimbabwean dollar yet most of my customers refuse to pay in US dollars,” he says.
         
         “But when you buy using the local currency, the prices charged for goods at the shops are exorbitant. In US dollars, the prices are fair,” he adds.
-        
-        “It’s just hard to survive now in this country.”  
     </p>
+    <p class="orange">“It’s just hard to survive now in this country.”  </p>
 </div>
 </article>
 <!--next buttons--> 
