--- a/index.html
+++ b/index.html
@@ -34,6 +34,12 @@
 <!--images-->
 
 <!--paragraph-->
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
 <div class="center-lines">
 <p>
     There is beauty in this country
@@ -51,7 +57,7 @@
     We do not deserve to be treated this way
 </p>
 <br>
-<p>
+<p class="orange">
     This country deserved better
 </p>
 </div>
