--- a/humans/index.html
+++ b/humans/index.html
@@ -5,14 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Humans of Zimbabwe</title>
     <link rel="stylesheet" href="./../css/style.css">
+    <script src="./../js/script.js" defer></script>
 </head>
 <body>
  <!--navbar-->    
  <nav>
     <a href="./../index.html"><img src="./../images/logo.png" alt="logo"></a>
     <img id="hamburger" src="./../icons/menu.svg" alt="Menu">
-    <div id="overlay" class="active"></div>
-    <ul id="menu" class="active">
+    <div id="overlay"></div>
+    <ul id="menu">
         <li><a href="./../economy/index.html">The Economy</a></li>
         <li><a href="./../humans/index.html">Humans of Zimbabwe</a></li>
         <li><a href="./../crisis/index.html">Silent Crisis</a></li>
