--- a/index.html
+++ b/index.html
@@ -18,22 +18,22 @@
 </div>
 <!--navbar-->
 <div>
-<nav id="homepage">
-    <a href="./index.html"><img id="logo" src="./images/logo.png" alt="logo"></a>
-    <img id="hamburger"  src="./icons/menu.svg" alt="menu">
-    <div id="overlay" class="active"></div>
-    <ul id="menu" class="active">
-        <li><a href="./economy/index.html">The Economy</a></li>
-        <li><a href="./humans/index.html">Humans of Zimbabwe</a></li>
-        <li><a href="./crisis/index.html">Silent Crisis</a></li>
-        <li><a href="./faq/index.html">FAQs</a></li>
-        <li><a href="./credits/index.html">Credits</a></li>
-    </ul>
-</nav>
-</div>
+    <nav id="homepage">
+        <a href="./index.html"><img id="logo" src="./images/logo.png" alt="logo"></a>
+        <img id="hamburger"  src="./icons/menu.svg" alt="menu">
+        <div id="overlay" class="active"></div>
+        <ul id="menu" class="active">
+            <li><a href="./economy/index.html">The Economy</a></li>
+            <li><a href="./humans/index.html">Humans of Zimbabwe</a></li>
+            <li><a href="./crisis/index.html">Silent Crisis</a></li>
+            <li><a href="./faq/index.html">FAQs</a></li>
+            <li><a href="./credits/index.html">Credits</a></li>
+        </ul>
+    </nav>
+    </div>
 <!--images-->
 
-<!--paragraph-->
+<!-- paragraph
 <br>
 <br>
 <br>
@@ -60,7 +60,7 @@
 <p class="orange">
     This country deserved better
 </p>
-</div>
+</div> -->
 <!--cards-->
 
 <!--footer-->
