--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 <!--images-->
 
-<!-- paragraph
+<!-- paragraph-->
 <br>
 <br>
 <br>
@@ -60,7 +60,7 @@
 <p class="orange">
     This country deserved better
 </p>
-</div> -->
+</div> 
 <!--cards-->
 
 <!--footer-->
