--- a/humans/index.html
+++ b/humans/index.html
@@ -58,7 +58,7 @@
     </div>
 
 <!--paragraph three-->  
-<div class ="right-align">
+<div class ="left-in">
 <h4>‘2020 will be worse’</h4>
 <p>
     A lack of social safety nets for the poor in urban Harare means many families have had to cut down on the number of meals they can afford to eat each day.
@@ -94,7 +94,7 @@
 </div>
 
 <!--paragraph five--> 
-<div class="right-align">
+<div class="left-in">
     <h4>Risk of starvation</h4>
     <p>
         As well as hyperinflation, Zimbabwe has been hit by severe drought in parts of the country. The UN World Food Programme (WFP) warned on Tuesday that food supplies will run out in early 2020 unless urgent assistance is provided.
@@ -135,7 +135,7 @@ Parirenyatwa was once a busy hospital, serving thousands of patients daily. It i
 </p>
 </div>
 <!--paragraph seven--> 
-<div class ="right-align">
+<div class ="left-in">
    <h4> Going to bed hungry</h4>
     <p>
 At Matagarika Flats in Mbare, Gladys Chihunda, 62, cooks a meal for her four grandchildren. She told CNN that they sometimes go to bed hungry. 
