--- a/credits/index.html
+++ b/credits/index.html
@@ -17,15 +17,58 @@
         <li><a href="./../economy/index.html">The Economy</a></li>
         <li><a href="./../humans/index.html">Humans of Zimbabwe</a></li>
         <li><a href="./../crisis/index.html">Silent Crisis</a></li>
+        <li><a href="./../faq/index.html">FAQs</a></li>
         <li><a href="./../credits/index.html">Credits</a></li>
     </ul>
 </div>
 </nav>
 
-
+<header>
+    <img src="./../images/credits.png" alt="Crisis" class="credits"> 
+    </header>
 
 <!--credits-->
+<article>
+<h4>
+The Articles Used 
+</h4>
+<h5>
+The Economy 
+</h5>
+<p>
+Muronzi, Chris. “‘Life’s so Tough’: Never-Ending Misery for Crisis-Hit Zimbabweans.” Zimbabwe News | Al Jazeera. Al Jazeera, July 3, 2020. https://www.aljazeera.com/economy/2020/7/3/lifes-so-tough-never-ending-misery-for-crisis-hit-zimbabweans.     
+</p>
 
+<h5>
+Humans of Zimbabwe
+</h5>
+<p>
+Chingono, Nyasha. “‘This Country Has Reduced Me to a Pauper,’ Zimbabweans Face a Bleak 2020.” CNN. Cable News Network, December 31, 2019. https://www.cnn.com/2019/12/31/africa/zimbabwe-economic-crisis-intl/index.html.
+</p>
 
+<h5>
+The Silent Crisis    
+</h5>
+<p>
+    Smith, Elliot. “Zimbabwe in ‘Economic and Humanitarian Crisis’ as IMF Sounds Alarm.” CNBC. CNBC, March 3, 2020. https://www.cnbc.com/2020/03/03/zimbabwe-in-economic-and-humanitarian-crisis-as-imf-sounds-alarm.html.     
+</p>
+
+<h4>The Graphs Featured Behind the Headings</h4>
+<h5>The Silent Crisis - this graph national debt increase from 2014 to 2024</h5>
+<p>Plecher, Published by H., and Jun 2. “Zimbabwe - National Debt 2014-2024.” Statista, June 2, 2020. https://www.statista.com/statistics/532532/national-debt-of-zimbabwe/. </p>
+
+<h5>Humans of Zimbabwe - this graph represents the GDP changes between 1998 and 2021</h5>
+<p>Plecher, Published by H., and Jun 2. “Zimbabwe - Gross Domestic Product (GDP) 1998-2021.” Statista, June 2, 2020. https://www.statista.com/statistics/455285/gross-domestic-product-gdp-in-zimbabwe/. </p>
+
+<h5>The Economy - this graph represents the climb of inflation from 1984 to 2021</h5>
+<p>Plecher, Published by H., and Jun 2. “Zimbabwe - Inflation Rate 1984-2021.” Statista, June 2, 2020. https://www.statista.com/statistics/455290/inflation-rate-in-zimbabwe/. </p>
+
+</article>
+
+<footer>
+    <div class="footer">
+        <p>This site was made by Pareen Bhagat for MEJO187 at UNC Chapel Hill</p>
+    </div>
+    </footer>
 </body>
 </html>
