--- a/crisis/index.html
+++ b/crisis/index.html
@@ -11,9 +11,9 @@
  <!--navbar-->    
  <nav>
     <a href="./../index.html"><img src="./../images/logo.png" alt="logo"></a>
-    <img id="hamburger" src="./../icons/menu.svg" alt="Menu" class="active">
-    <div id="overlay" class="active"></div>
-    <ul id="menu" class="active">
+    <img id="hamburger" src="./../icons/menu.svg" alt="Menu">
+    <div id="overlay"></div>
+    <ul id="menu">
         <li><a href="./../economy/index.html">The Economy</a></li>
         <li><a href="./../humans/index.html">Humans of Zimbabwe</a></li>
         <li><a href="./../crisis/index.html">Silent Crisis</a></li>
@@ -21,12 +21,8 @@
     </ul>
 </div>
 </nav>
-<div>
-    <img src="./../images/crisis.png" alt="The Silent Crisis" class="center">
-</div>
-<!--video-->
-<div>
-    <iframe width="600" height="315" src="https://www.youtube.com/embed/whDZUhEgDwo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<div class="center">
+    <img src="./../images/crisis.png" alt="The Silent Crisis" >
 </div>
 <!--paragraph one--> 
 <article>
@@ -47,7 +43,9 @@ These reforms included a fiscal consolidation aimed at reducing monetary financi
 
 
 </p>
-
+<div >
+    <iframe width="600" height="315" src="https://www.youtube.com/embed/whDZUhEgDwo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
 <!--paragraph two--> 
 <h3>IMF program ‘off-track’</h3>
 <p>
@@ -67,6 +65,11 @@ Zimbabwean authorities are therefore forced to walk a tightrope between tight mo
 <!--next buttons--> 
 
 <!--footer--> 
+<footer>
+    <div class="footer">
+        <p>This site was made by Pareen Bhagat for MEJO187 at UNC Chapel Hill</p>
+    </div>
+    </footer>
     
 </body>
 </html>
