--- a/economy/index.html
+++ b/economy/index.html
@@ -142,5 +142,10 @@ Last month, Health Minister Obadiah Moyo was arrested on corruption charges in r
 <!--next buttons--> 
 
 <!--footer--> 
+<footer>
+    <div class="footer">
+        <p>This site was made by Pareen Bhagat for MEJO187 at UNC Chapel Hill</p>
+    </div>
+    </footer>
 </body>
 </html>
