--- a/faq/index.html
+++ b/faq/index.html
@@ -12,8 +12,8 @@
 <nav>
     <a href="./../index.html"><img src="./../images/logo.png" alt="logo"></a>
     <img id="hamburger" src="./../icons/menu.svg" alt="Menu">
-    <div></div>
-    <ul>
+    <div id="overlay"></div>
+    <ul id="menu">
         <li><a href="./../economy/index.html">The Economy</a></li>
         <li><a href="./../humans/index.html">Humans of Zimbabwe</a></li>
         <li><a href="./../crisis/index.html">Silent Crisis</a></li>
@@ -21,20 +21,22 @@
         <li><a href="./../credits/index.html">Credits</a></li>
     </ul>
 </nav>
-
+<header>
+    <img src="./../images/faq.png" alt="FAQs"class="center" >
+    </header>
 <!--questions-->
 <button class="accordion">Where is Zimbabwe?</button>
     
     <div class="panel"> 
         <p>Above South Africa
-            <img src="">
+            <img src="./../images/africa.jpg" alt="map of africa">
         </p>
     </div>
 
 <button class="accordion">When did Zimbabwe's economic turmoil start?</button>
     
     <div class="panel"> 
-        <p>2008</p>
+        <p>2008. Zimbabwe suffered from hyperinflation and had an estimated peak of inflation was 79.6 billion.</p>
     </div>    
 
 <button class="accordion">Who is the president of Zimbabwe?</button>
@@ -44,5 +46,10 @@
         </p>
     </div>       
 <!--footer-->
+<footer>
+    <div class="footer">
+        <p>This site was made by Pareen Bhagat for MEJO187 at UNC Chapel Hill</p>
+    </div>
+    </footer>
 </body>
 </html>
