--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <main>
    <div class="video-bg">
    <video autoplay loop muted>
-       <source src="./videos/zim2.webm" type="video/mp4">
+       <source src="./videos/zim2.webm" type="video/webm">
    </video>
 </div>
 <!--navbar-->
@@ -34,12 +34,8 @@
 <!--images-->
 
 <!-- paragraph-->
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
+<br><br>
+
 <div class="center-lines">
 <p>
     There is beauty in this country
@@ -61,12 +57,16 @@
     This country deserved better
 </p>
 </div> 
+<br><br>
 <!--cards-->
 
 <!--footer-->
 <footer>
-    
+<div class="footer">
+    <p>This site was made by Pareen Bhagat for MEJO187 at UNC Chapel Hill</p>
+</div>
 </footer>
+
 </main>
 </body>
 </html>
