--- a/crisis/index.html
+++ b/crisis/index.html
@@ -17,6 +17,7 @@
         <li><a href="./../economy/index.html">The Economy</a></li>
         <li><a href="./../humans/index.html">Humans of Zimbabwe</a></li>
         <li><a href="./../crisis/index.html">Silent Crisis</a></li>
+        <li><a href="./../faq/index.html">FAQs</a></li>
         <li><a href="./../credits/index.html">Credits</a></li>
     </ul>
 </div>
