--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <main>
    <div class="video-bg">
    <video autoplay loop muted>
-       <source src="./videos/zim2.webm" type="video/webm">
+       <source src="./videos/vid.mp4" type="video/webm">
    </video>
 </div>
 <!--navbar-->
@@ -37,22 +37,6 @@
 <br><br>
 
 <div class="center-lines">
-<p>
-    There is beauty in this country
-</p>
-<br>
-<p>
-    Beauty that has so much to offer
-</p>
-<br>
-<p>
-    It does not deserve to be treated this way
-</p>
-<br>
-<p>
-    We do not deserve to be treated this way
-</p>
-<br>
 <p class="orange">
     This country deserved better
 </p>
