--- a/index.html
+++ b/index.html
@@ -29,16 +29,15 @@
        <source src="./videos/vid.mp4" type="video/webm">
    </video>
 </div>
-<!--navbar-->
-
-<!--images-->
-
-<!-- paragraph-->
-<br><br>
-
+<br>
 <div class="center-lines">
+    <p>
+All our lives we have been let down by the government. Our troubles come disguised in appealing ways, under names like “independence,” “freedom.” Yet we have never experienced the true meaning of these words. However, these false promises are sold to the first world countries too. 
+<p>We will not fall for them anymore.</p> <p>We will do what we do best.</p> <p>Make a plan.</p>         
+This is a reminder that our country though, struggling, is still breathtaking. There is hope in every sunset. A big and beautiful dream in every ripple on the Zambezi River. A raoring strength of a nation the Vicotria Falls. 
+Though we are small and our faith dwindling with starving child, together we can change the future of our country without the government. <p>Re-imagine your country.</p> 
 <p class="orange">
-    This country deserved better
+Zimagine the future we can shape.
 </p>
 </div> 
 <br><br>
