--- a/crisis/index.html
+++ b/crisis/index.html
@@ -60,6 +60,18 @@ Zimbabwean authorities are therefore forced to walk a tightrope between tight mo
 
 “While the 2020 budget includes a significant increase in social spending, it is likely insufficient to meet the pressing social needs. Absent a scaling up of donor support, the risks of a deep humanitarian crisis are high,” IMF officials concluded.
 </p>
+<h3>Political stability risk</h3>
+<p>
+Van der Linde agreed, suggesting that while the Treasury in its 2020 budget was compelled to set aside substantial funds for social spending, this will likely be “insufficient to address Zimbabwe’s growing social needs.”
+
+IMF executive directors issued a series of recommendations requiring urgent attention, including urging a concerted effort from the Zimbabwean authorities to coordinate fiscal, monetary and foreign exchange policies, along with implementing non-essential spending cuts and agricultural support reforms and enhancing central bank independence and transparency.
+
+Directors also stressed the need for the government to address “governance and corruption challenges, entrenched vested interests, and enforcement of the rule of law” in order to improve the business climate. 
+
+However, with the IMF staff monitored program off course, van der Linde suggested that 2020 could only be “extremely testing” for the government, the Zimbabwean people, businesses and investment prospects.
+
+“From our perspective, there is little prospect of a major improvement to Zimbabwe’s economic and financial challenges in the short- to medium term and the measures in place designed to improve prospects are likely to have negative social consequences, with some risk to political instability,” he concluded.
+</p>
 </article>
 <!--paragraph three--> 
 
