--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <p>
 All our lives we have been let down by the government. Our troubles come disguised in appealing ways, under names like “independence,” “freedom.” Yet we have never experienced the true meaning of these words. However, these false promises are sold to the first world countries too. 
 <p>We will not fall for them anymore.</p> <p>We will do what we do best.</p> <p>Make a plan.</p>         
-This is a reminder that our country though, struggling, is still breathtaking. There is hope in every sunset. A big and beautiful dream in every ripple on the Zambezi River. The roaring strength of a nation the Vicotria Falls. 
+This is a reminder that our country though, struggling, is still breathtaking. There is hope in every sunset. A big and beautiful dream in every ripple on the Zambezi River. The roaring strength of a nation the Victoria Falls. 
 Though we are small and our faith dwindling with starving child, together we can change the future of our country without the government. <p>Re-imagine your country.</p> 
 <p class="orange">
 Zimagine the future we can shape.
