--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <main>
    <div class="video-bg">
    <video autoplay loop muted>
-       <source src="./videos/vid.mp4" type="video/webm">
+       <source src="./videos/vid.mp4" type="video/mp4">
    </video>
 </div>
 <br>
